# Plagiarism-Detector

./: CMakeLists.txt
sample_data/: database_doc1.txt  database_doc2.txt  query_suspicious.txt
src/: engine.cpp  engine.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  ngram.cpp  rawbuffer.hpp  test_engine.cpp  vptree.cpp  vptree.hpp
